# riksprot-jupyterlite

./: .gitignore  Makefile  README.md  jupyter-lite.json  pyproject.toml  pyriksprot_lite-0.5.19-py3-none-any.whl  requirements.txt
api/contents/: all.json
api/contents/data/: all.json
api/contents/data/tranströmer_inferred_model/: all.json
api/contents/notebooks/: all.json
api/contents/notebooks/statistics/: all.json
api/contents/notebooks/token_counts/: all.json
api/contents/notebooks/topic_modeling/: all.json
api/contents/notebooks/word_trends/: all.json
api/contents/pyolite/: all.json
api/contents/riksdagens_protokoll/: all.json
api/contents/riksdagens_protokoll/statistics/: all.json
api/contents/riksdagens_protokoll/token_counts/: all.json
api/contents/statistics/: all.json
api/contents/token_counts/: all.json
api/contents/topic_modeling/: all.json
api/contents/utility/: all.json
api/contents/westac/: all.json
api/contents/word_trends/: all.json
api/contents/xeus-lua/: all.json
api/contents/xeus-sqlite/: all.json
api/contents/xeus-wren/: all.json
content/data/tranströmer_inferred_model/: model_options.json
content/riksdagens_protokoll/: testbed.ipynb
content/utility/: __init__.py  utils.py
files/topic_modeling/: explore.ipynb
files/utility/: testbed.ipynb  utils.py
lab/extensions/ipydatagrid/: package.json
lab/extensions/jupyter-cytoscape/: package.json
lab/extensions/jupyterlab-system-monitor/: package.json
lab/extensions/jupyterlab-topbar-extension/: package.json
package/: pyriksprot_lite-0.5.19-py3-none-any.whl
utility/: utils.py
(+49 files in other folders)
